# Web_Accessibility_Auditor

./: .gitignore  .pyre_configuration  OPERATIONAL_GUIDE.md  check_db.py  debug_india_gov.py  pyproject.toml  run_backend.py  run_server.py
Web_Accessibility_Auditor/: .gitignore  pyproject.toml  tmp_check_db_raw.py  tmp_check_forensics.py
Web_Accessibility_Auditor/src/auditor/: __init__.py  batch_audit.py  single_url.py
Web_Accessibility_Auditor/tmp/: live_audit.py  migrate_db.py  verify_remediation.py
auditor/: batch_audit.py  batch_seeding.py  single_url.py  site_audit.py
auditor/application/: batch_service.py  crawl_service.py
auditor/domain/: audit_session.py
auditor/infrastructure/: audit_repository.py  link_extractor.py  persistence_models.py  playwright_engine.py  target_repository.py
auditor/shared/: logging.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: GraphView.tsx  Navbar.tsx
frontend/src/pages/: AuditReport.tsx  Dashboard.tsx  GraphInsights.tsx  History.tsx  Insights.tsx  IssueDetail.tsx  Login.tsx  Privacy.tsx  Profile.tsx  ScanScreen.tsx  Support.tsx
src/auditor/: __init__.py  batch_audit.py  batch_seeding.py  main.py  single_url.py  site_audit.py
src/auditor/application/: agent_service.py  audit_service.py  batch_service.py  crawl_service.py  discovery_service.py  reporter.py  tui_dashboard.py  worker.py
tmp/: check_db.py  final_verify_audit.py  purge_auditor.py  scan_indentation.py  verify_audit.py
(+59 files in other folders)
