[project]
name = "accessibility-auditor"
version = "0.1.0"
description = "High-Performance Web Accessibility Auditor (Batch Engine)"
authors = [
    {name = "Antigravity"}
]
requires-python = ">=3.12"
dependencies = [
    "playwright (>=1.58.0,<2.0.0)",
    "axe-playwright-python (>=0.1.7,<0.2.0)",
    "fastapi (>=0.135.1,<0.136.0)",
    "uvicorn (>=0.42.0,<0.43.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "redis (>=7.3.0,<8.0.0)",
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "sqlmodel (>=0.0.22,<0.1.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "aiosqlite (>=0.22.1,<0.23.0)",
    "psutil (>=6.1.1,<7.0.0)",
    "rich (>=13.9.4,<14.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = true
packages = [{include = "auditor", from = "src"}]

[dependency-groups]
dev = [
    "ruff (>=0.15.7,<0.16.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "import-linter (>=2.11,<3.0)"
]
